# zlrclib

./: CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sections-rom.ld
app/boards/: native_sim.conf
app/src/: http_server.c  main.c  ws.c
boards/zlrclib/zlrclibdk/: Kconfig  Kconfig.zlrclibdk  board.yml  zlrclibdk_appcpu.dts  zlrclibdk_appcpu.yaml  zlrclibdk_appcpu_defconfig  zlrclibdk_pinctrl.dtsi  zlrclibdk_procpu.dts  zlrclibdk_procpu.yaml  zlrclibdk_procpu_defconfig
include/app/lib/: requests.h  wifi_conn_mgr.h
lib/: CMakeLists.txt  Kconfig
lib/requests/: CMakeLists.txt  Kconfig  requests.c  requests_certs.h  requests_connect.c  requests_parser.c  requests_private.h
lib/wifi_conn_mgr/: CMakeLists.txt  Kconfig  wifi_conn_mgr.c
web_resources/: index.html  main.js
